--- a/templates/form_cancion.phtml
+++ b/templates/form_cancion.phtml
@@ -1,4 +1,7 @@
 <form action="agregarCancion" method="POST">
+    <div>
+        <h3>Agregar nueva canción</h3>
+    </div>
     <div class="row">
         <div class="col-9">
             <div>
@@ -21,7 +24,7 @@
                 <label for="id_genero">Género</label>
                 <select name="id_genero" id="id_genero">
                     <option value="seleccionar">Seleccionar...</option>
-                    <option value="1">1</option>                    
+                    <option value="1">1</option>
                 </select>
             </div>
         </div>
