--- a/templates/form_genero.phtml
+++ b/templates/form_genero.phtml
@@ -1,11 +1,11 @@
-<form action="agregarGenero" method="POST">
-    <div class="row">
+<form class="form" action="agregarGenero" method="POST">
+    <div class="form-row">
         <div class="col-9">
-            <div>
+            <div class="form-group">
                 <label for="descripcion">Descripción</label>
-                <input required name="descripcion" type="text">
+                <input required name="descripcion" type="text" class="form-control">
             </div>
         </div>
     </div>
-    <button type="submit">Guardar</button>
+    <button type="submit" class="btn btn-primary">Guardar</button>
 </form>
