--- a/templates/Cancion_Completa.phtml
+++ b/templates/Cancion_Completa.phtml
@@ -1,4 +1,4 @@
-<table>
+<table class="table table-striped">
     <thead>
         <th>Id</th>
         <th>Título</th>
@@ -13,18 +13,44 @@
                     <?php echo $cancion->id_cancion ?>
                 </td>
                 <td>
-                    <?php echo $cancion->titulo ?>
+                    <?php
+                    if ($id_editar == $cancion->id_cancion) { ?>
+                        <form action="updateCancion/<?= $cancion->id_cancion ?>" method="POST">
+                            <div class="row">
+                                <div class="col-9">
+                                    <div class="form-group">
+                                        <input required name="titulo" type="text" value="<?php echo $cancion->titulo ?>" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                        <input required name="artista" type="text" value="<?php echo $cancion->artista ?>" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                        <input required name="duracion" type="text" value="<?php echo $cancion->duracion ?>" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Guardar cambio</button>
+                        </form>
+                    <?php
+                    } else {
+                    ?>
+                        <div class="">
+                            <div class="">
+                                <?php echo $cancion->titulo ?>
+                            </div>
+                            <div class="">
+                                <?php echo $cancion->artista ?>
+                            </div>
+                            <div class="">
+                                <?php echo $cancion->duracion ?>
+                            </div>
+                        </div>
+                    <?php
+                    }
+                    ?>
                 </td>
                 <td>
-                    <?php echo $cancion->artista ?>
-                </td>
-                <td>
-                    <?php echo $cancion->duracion ?>
-                </td>
-                <td>
-                    <?php echo $cancion->id_cancion ?>
-                </td>
-                <td>
+                    <a href="verLetra/<?= $cancion->id_cancion ?>" type="button" class='btn btn-primary'>Ver letra</a>
                     <a href="editarCancion/<?= $cancion->id_cancion ?>" type="button" class='btn btn-success ml-auto'>Editar</a>
                     <a href="eliminarCancion/<?= $cancion->id_cancion ?>" type="button" class='btn btn-danger ml-auto'>Borrar</a>
                 </td>
