--- a/templates/listar_cancion.phtml
+++ b/templates/listar_cancion.phtml
@@ -8,8 +8,7 @@ if (isset($cancion[0]) && isset($cancion[0]->titulo)) {
 ?>
     <div class="container mt-4">
         <h1 class="display-4"><?php echo $genero; ?></h1>
-        <h2><?php echo $titulo; ?></h2>
-        <h3><?php echo $artista; ?></h3>
+        <h2><?php echo $titulo; ?> - <?php echo $artista; ?></h2>
         <h6><?php echo "Duración: " . $duracion . " minutos"; ?></h6>
         <pre class="mt-4"><?php echo $letra; ?></pre>
     </div>
