Realizo modificaciones en el templates

--- a/templates/show_error.phtml
+++ b/templates/show_error.phtml
@@ -1,6 +1,6 @@
 <?php
-echo "
-    <div class='alert alert-danger' role='alert'>
-        $error
-    </div> 
-    ";
+
+function showError($error){
+    echo "<div class='alert alert-danger' role='alert'> $error </div>";
+}
+
