--- a/templates/admin_genero.phtml
+++ b/templates/admin_genero.phtml
@@ -18,6 +18,7 @@
                             <input required name="descripcion" type="text" value="<?php echo $genero->descripcion ?>">
                             <th>                
                                 <button type="submit" class="btn btn-primary">Guardar cambio</button>
+                                <a href="volverAbmGenero" type="button" class="btn btn-secondary ml-auto">Volver</a>
                             </th>    
                         </form>
                     <?php
