--- a/templates/listar_canciones.phtml
+++ b/templates/listar_canciones.phtml
@@ -5,5 +5,8 @@
                 <a href="contenido/<?php echo $cancion->id_cancion ?>" class="text-decoration-none text-dark"><b><?php echo $cancion->titulo ?> - <?php echo $cancion->artista ?></b></a>
             </div>
         </li>
-    <?php } ?>
-</ul>
+        <?php } ?>
+    </ul>
+    <div>
+        <a href="generos" type="button" class="btn btn-secondary ml-auto">Volver</a>
+    </div>
