--- a/templates/listar_canciones.phtml
+++ b/templates/listar_canciones.phtml
@@ -1,13 +1,15 @@
-<h1>Género: </h1>
+<h1>Género:</h1>
 <ul class="list-group">
     <?php foreach ($canciones as $cancion) { ?>
         <li class="list-group-item">
             <div>
-                <a href="contenido/<?php echo $cancion->id_cancion ?>" class="text-decoration-none text-dark"><b><?php echo $cancion->titulo ?> - <?php echo $cancion->artista ?></b></a>
+                <a href="contenido/<?php echo $cancion->id_cancion ?>" class="text-decoration-none text-dark">
+                    <b><?php echo $cancion->titulo ?> - <?php echo $cancion->artista ?></b>
+                </a>
             </div>
         </li>
-        <?php } ?>
-    </ul>
-    <div>
-        <a href="generos" type="button" class="btn btn-secondary ml-auto">Volver</a>
-    </div>
+    <?php } ?>
+</ul>
+<div>
+    <a href="generos" class="btn btn-secondary mt-3">Volver</a>
+</div>
