--- a/templates/Cancion_Completa.phtml
+++ b/templates/Cancion_Completa.phtml
@@ -1,56 +1,49 @@
-<table class="table table-striped">
-    <thead>
-        <th>Id</th>
-        <th>Título</th>
-        <th>Artista</th>
-        <th>Duración</th>
-        <th>Acción</th>
-    </thead>
-    <tbody>
-        <?php foreach ($canciones as $cancion) { ?>
+<div class="container">
+    <h3>Listado de canciones</h3>
+    <table class="table table-striped">
+        <thead class="thead-dark">
             <tr>
-                <td>
-                    <?php echo $cancion->id_cancion ?>
-                </td>
-                <td>
-                    <?php
-                    if ($id_editar == $cancion->id_cancion) { ?>
-                        <form action="updateCancion/<?= $cancion->id_cancion ?>" method="POST">
-                                <input required name="titulo" type="text" value="<?php echo $cancion->titulo ?>" class="form-control">
-                            <td>       
-                                <input required name="artista" type="text" value="<?php echo $cancion->artista ?>" class="form-control">
-                            </td> 
-                            <td>        
-                                <input required name="duracion" type="text" value="<?php echo $cancion->duracion ?>" class="form-control">
-                            </td>
-                            <td>       
-                                <button type="submit" class="btn btn-primary">Guardar cambio</button>
-                                <a href="volverAbmCancion" type="button" class="btn btn-secondary ml-auto">Volver</a>
-                            </td>    
-                        </form>
-                    <?php
-                    } else { echo $cancion->titulo; } ?>
-                </td>
-                <td>
-                    <?php 
-                    if ($id_editar == $cancion->id_cancion) {
-                    } else { echo $cancion->artista;
-                    } ?>
-                </td>
-                <td>
-                    <?php 
-                    if ($id_editar == $cancion->id_cancion) {
-                    } else { echo $cancion->duracion;
-                    } ?>
-                </td>
-                <td>
-                    <?php if ($id_editar != $cancion->id_cancion) { ?>
-                        <a href="verLetra/<?= $cancion->id_cancion ?>" type="button" class='btn btn-primary'>Ver letra</a>
-                        <a href="editarCancion/<?= $cancion->id_cancion ?>" type="button" class='btn btn-success ml-auto'>Editar</a>
-                        <a href="eliminarCancion/<?= $cancion->id_cancion ?>" type="button" class='btn btn-danger ml-auto'>Borrar</a>
-                    <?php } ?>
-                </td>
+                <th>Id</th>
+                <th>Título</th>
+                <th>Artista</th>
+                <th>Duración</th>
+                <th>Acción</th>
             </tr>
-        <?php } ?>
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            <?php foreach ($canciones as $cancion) { ?>
+                <tr>
+                    <td><?php echo $cancion->id_cancion ?></td>
+                    <td>
+                        <?php if ($id_editar == $cancion->id_cancion) { ?>
+                            <form action="updateCancion/<?= $cancion->id_cancion ?>" method="POST">
+                                <input required name="titulo" type="text" value="<?php echo $cancion->titulo ?>" class="form-control">
+                            </form>
+                        <?php } else { echo $cancion->titulo; } ?>
+                    </td>
+                    <td>
+                        <?php if ($id_editar == $cancion->id_cancion) { ?>
+                            <form action="updateCancion/<?= $cancion->id_cancion ?>" method="POST">
+                                <input required name="artista" type="text" value="<?php echo $cancion->artista ?>" class="form-control">
+                            </form>
+                        <?php } else { echo $cancion->artista; } ?>
+                    </td>
+                    <td>
+                        <?php if ($id_editar == $cancion->id_cancion) { ?>
+                            <form action="updateCancion/<?= $cancion->id_cancion ?>" method="POST">
+                                <input required name="duracion" type="text" value="<?php echo $cancion->duracion ?>" class="form-control">
+                            </form>
+                        <?php } else { echo $cancion->duracion; } ?>
+                    </td>
+                    <td>
+                        <?php if ($id_editar != $cancion->id_cancion) { ?>
+                            <a href="verLetra/<?= $cancion->id_cancion ?>" class="btn btn-primary">Ver letra</a>
+                            <a href="editarCancion/<?= $cancion->id_cancion ?>" class="btn btn-success ml-2">Editar</a>
+                            <a href="eliminarCancion/<?= $cancion->id_cancion ?>" class="btn btn-danger ml-2">Borrar</a>
+                        <?php } ?>
+                    </td>
+                </tr>
+            <?php } ?>
+        </tbody>
+    </table>
+</div>
