--- a/templates/form_cancion.phtml
+++ b/templates/form_cancion.phtml
@@ -10,7 +10,7 @@
                     <input required name="titulo" type="text" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="artista">Artista</label>
+                    <label for "artista">Artista</label>
                     <input required name="artista" type="text" class="form-control">
                 </div>
                 <div class="form-group">
@@ -19,12 +19,11 @@
                 </div>
                 <div class="form-group">
                     <label for="letra">Letra</label>
-                    <textarea name="letra" class="form-control mt-4" rows="10" cols="70"></textarea>
+                    <textarea name="letra" class="form-control" rows="10" cols="70"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="id_genero">Género</label>
                     <select name="id_genero" id="id_genero" class="form-control">
-                        <option value="seleccionar">Seleccionar...</option>
                         <?php 
                         foreach ($generos as $genero) { ?>
                             <option value="<?php echo $genero->id_genero?>"><?php echo $genero->descripcion ?></option>
