--- a/templates/form_genero.phtml
+++ b/templates/form_genero.phtml
@@ -7,5 +7,5 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Guardar</button>
+    <button type="submit" class="btn btn-primary mt-2">Guardar</button>
 </form>
