agrego funcion de mostrar el genero cuando filtr por cancion y arregle el boton de guardar cambio cuando estas editando una cancion

--- a/templates/admin_genero.phtml
+++ b/templates/admin_genero.phtml
@@ -18,10 +18,10 @@
                                 <div class="input-group">
                                     <input required name="descripcion" type="text" class="form-control" value="<?php echo $genero->descripcion ?>">
                                     <div class="input-group-append">
-                                        <button type="submit" class="btn btn-primary">Guardar cambio</button>
+                                        <button type="submit" class="btn btn-primary">Guardar</button>
                                     </div>
                                 </div>
-                                <a href="volverAbmGenero" type="button" class="btn btn-secondary mt-2">Volver</a>
+                                <a href="volverAbmGenero" type="button" class="btn btn-secondary">Cancelar</a>
                             </form>
                         <?php } else { ?>
                             <?php echo $genero->descripcion; ?>
