--- a/templates/Cancion_Completa.phtml
+++ b/templates/Cancion_Completa.phtml
@@ -17,23 +17,19 @@
                     <td>
                         <?php if ($id_editar == $cancion->id_cancion) { ?>
                             <form action="updateCancion/<?= $cancion->id_cancion ?>" method="POST">
-                                <input required name="titulo" type="text" value="<?php echo $cancion->titulo ?>" class="form-control">
+                                <td> <input required name="titulo" type="text" value="<?php echo $cancion->titulo ?>" class="form-control"> </td>
+                                <td> <input required name="artista" type="text" value="<?php echo $cancion->artista ?>" class="form-control"> </td>
+                                <td> <input required name="duracion" type="text" value="<?php echo $cancion->duracion ?>" class="form-control"> </td>
+                                <td>
+                                    <button type="submit" class="btn btn-primary">Guardar</button>
+                                    <a href="volverAbmCancion" type="button" class="btn btn-secondary">Cancelar</a>
+                                </td>
                             </form>
-                        <?php } else { echo $cancion->titulo; } ?>
-                    </td>
-                    <td>
-                        <?php if ($id_editar == $cancion->id_cancion) { ?>
-                            <form action="updateCancion/<?= $cancion->id_cancion ?>" method="POST">
-                                <input required name="artista" type="text" value="<?php echo $cancion->artista ?>" class="form-control">
-                            </form>
-                        <?php } else { echo $cancion->artista; } ?>
-                    </td>
-                    <td>
-                        <?php if ($id_editar == $cancion->id_cancion) { ?>
-                            <form action="updateCancion/<?= $cancion->id_cancion ?>" method="POST">
-                                <input required name="duracion" type="text" value="<?php echo $cancion->duracion ?>" class="form-control">
-                            </form>
-                        <?php } else { echo $cancion->duracion; } ?>
+                        <?php } else { 
+                                    ?> <td> <?php echo $cancion->titulo; ?> </td>
+                                    <td> <?php echo $cancion->artista; ?> </td>
+                                    <td> <?php echo $cancion->duracion; ?> </td> <?php
+                                } ?>
                     </td>
                     <td>
                         <?php if ($id_editar != $cancion->id_cancion) { ?>
