--- a/templates/editar_letra.phtml
+++ b/templates/editar_letra.phtml
@@ -12,7 +12,7 @@
                                             <h1>Editar letra</h1>
                                         </div>
                                         <div class="form-group">
-                                            <textarea name="letra" class="mt-4" rows="50" cols="70"><?php echo $cancion->letra ?></textarea>
+                                            <textarea name="letra" class="mt-4" rows="50" cols="70"><?= $cancion->letra ?></textarea>
                                         </div>
                                     </div>
                                 </div>
