Realizo algunas funciones de errores

--- a/templates/editar_letra.phtml
+++ b/templates/editar_letra.phtml
@@ -16,23 +16,15 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                
                                 <button type="submit" class="btn btn-primary">Guardar cambio</button>
                                 <a href="volverAbmCancion" type="button" class="btn btn-secondary ml-auto">Volver</a>
                             </form>
-                        <?php
-                        } else {
-                        ?>
-                    <td>
-                        
+                  <?php } ?>
                     </td>
-                <?php
-                        }
-                ?>
-                </td>
                 </tr>
-            <?php
-            } 
-            ?>
+            <?php } ?>
         </tbody>
         </table>
     </div>
