--- a/templates/listar_cancion.phtml
+++ b/templates/listar_cancion.phtml
@@ -1,4 +1,6 @@
 <?php
+require_once 'templates/show_error.phtml';
+
 if (isset($cancion[0]) && isset($cancion[0]->titulo)) {
     $titulo = $cancion[0]->titulo;
     $artista = $cancion[0]->artista;
@@ -14,6 +16,6 @@ if (isset($cancion[0]) && isset($cancion[0]->titulo)) {
 </div>
 <?php 
 } else {
-    echo "No se pudo acceder a la propiedad del arreglo";
+    showError("No se pudo acceder a la propiedad del arreglo");
 }
 ?>
