--- a/templates/editar_letra.phtml
+++ b/templates/editar_letra.phtml
@@ -16,7 +16,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Guardar cambio</button>
+                                <button type="submit" class="btn btn-primary">Guardar</button>
                                 <a href="volverAbmCancion" type="button" class="btn btn-secondary ml-auto">Volver</a>
                             </form>
                         <?php
