--- a/templates/login.phtml
+++ b/templates/login.phtml
@@ -1,4 +1,4 @@
-<?php require 'templates/header.php' ?>
+<?php require 'templates/header.phtml' ?>
 
 <div class="mt-5 w-25 mx-auto">
     <form method="POST" action="auth">
@@ -21,4 +21,4 @@
     </form>
 </div>
 
-<?php require 'templates/footer.php' ?>
+<?php require 'templates/footer.phtml' ?>
