--- a/templates/show_error.phtml
+++ b/templates/show_error.phtml
@@ -1,6 +1,10 @@
 <?php
 
 function showError($error){
-    echo "<div class='alert alert-danger' role='alert'> $error </div>";
+    require 'templates/header.phtml' ?>
+    <div class='alert alert-danger' role='alert'>
+        <?= $error ?>
+    </div> 
+    <?php require 'templates/footer.phtml';
 }
-
+?>
